# LiDARTag

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  if_no_ring.odt  package.xml  setup.sh
cmake/: FindEigen3.cmake  FindTBB.cmake
include/: apriltag_utils.h  lidar_tag.h  lidartag.h  tag16h5.h  tag49h14.h  thread_pool.h  types.h  ultra_puck.h  utils.h
include/lidartag/: apriltag_utils.hpp  lidartag.hpp  nanoflann.hpp  rectangle_estimator.hpp  tag16h5.hpp  tag49h14.hpp  thread_pool.hpp  types.hpp  ultra_puck.hpp  utils.hpp
include/lidartag/decoding/: naive_hamming_decoding.hpp
launch/: H3D.launch  H3D.launch.xml  LiDARTag.launch  LiDARTag_backup.launch  LiDARTag_backup.launch.xml  LiDARTag_indoor.launch  LiDARTag_main.launch  LiDARTag_main.launch.xml  LiDARTag_master.launch  LiDARTag_master.launch.xml  LiDARTag_master_pandar.launch  LiDARTag_master_pandar.launch.xml  LiDARTag_outdoor.launch  LiDARTag_smallest.launch  LiDARTag_smallest.launch.xml  LiDARTag_smallest_pandar.launch  LiDARTag_tag_calib.launch  LiDARTag_threetags.launch  LiDARTag_threetags.launch.xml  LiDARTag_twoTags_pandar.launch  LiDARTag_twoTags_pandar.launch.xml  LiDARTag_twotags.launch  LiDARTag_twotags.launch.xml  LiDARTag_twotags_padar.launch  cartographer.launch  default_config.rviz  kitti.launch  lidar_bh.launch  lidartag_at128.launch.xml  lidartag_master.launch  lidartag_master.launch.xml  lidartag_master_pandar.launch.xml  lidartag_os1_128.launch.xml  lidartag_os2.launch.xml  lidartag_outdoor.launch.xml  lidartag_pandar64.launch.xml  lidartag_pandar_40p.launch.xml  lidartag_pandar_qt.launch.xml  lidartag_smallest.launch.xml  lidartag_smallest_pandar.launch  (+8 more)
launch/old/: H3D.launch.xml  cartographer.launch.xml  kitti.launch.xml  lidar_bh.launch.xml  lidartag.launch.xml  lidartag_backup.launch.xml  lidartag_indoor.launch.xml  lidartag_main.launch.xml  lidartag_master.launch.xml  lidartag_smallest_pandar.launch  lidartag_tag_calib.launch  lidartag_threetags.launch.xml  lidartag_twotags.launch.xml  lidartag_twotags_padar.launch  standlone_indoor_bh.launch.xml  standlone_outdoor_bh.launch.xml
lib/: note.txt
lib/0/: tag16_05_00003_planer.csv  tag16_05_00005_geometry.csv  tag16_05_00008_planer.csv  tag16_06_00001_geometry.csv  tag16_06_00002_geometry.csv  tag16_06_00004_geometry.csv  tag16_06_00005_geometry.csv  tag16_06_00008_geometry.csv
lib/0.55/: tag16_05_00002_geometry.csv
lib/1/: tag16_06_00001_geometry.csv  tag16_06_00002_geometry.csv  tag16_06_00003_geometry.csv  tag16_06_00005_geometry.csv  tag16_06_00006_geometry.csv  tag16_06_00007_geometry.csv  tag16_06_00008_geometry.csv
lib/2/: tag16_06_00001_geometry.csv  tag16_06_00004_geometry.csv  tag16_06_00005_geometry.csv  tag16_06_00007_geometry.csv  tag16_06_00008_geometry.csv
lib/3/: tag16_06_00002_geometry.csv  tag16_06_00005_geometry.csv  tag16_06_00006_geometry.csv  tag16_06_00008_geometry.csv
lib/aip_x2/0/: tag16_05_00000_planer.csv  tag16_05_00001_geometry.csv  tag16_05_00001_planer.csv  tag16_05_00002_planer.csv  tag16_05_00003_geometry.csv  tag16_05_00003_planer.csv  tag16_05_00006_geometry.csv  tag16_05_00007_geometry.csv  tag16_05_00008_geometry.csv
lib/aip_x2/1/: tag16_05_00001_geometry.csv  tag16_05_00001_planer.csv  tag16_05_00004_planer.csv  tag16_05_00006_geometry.csv  tag16_05_00007_geometry.csv
lib/aip_x2/origin/0.55/: tag16_05_00000_planer.csv  tag16_05_00001_geometry.csv  tag16_05_00001_planer.csv  (+4 more)
lib/origin/0/: tag16_06_00000_geometry.csv  tag16_06_00003_geometry.csv  tag16_06_00006_geometry.csv  tag16_06_00007_geometry.csv
lib/origin/1/: tag16_06_00000_geometry.csv  tag16_06_00004_geometry.csv
lib/origin/2/: tag16_06_00000_geometry.csv  tag16_06_00002_geometry.csv  tag16_06_00003_geometry.csv  tag16_06_00006_geometry.csv
lib/origin/4/: tag16_06_00000_geometry.csv  tag16_06_00001_geometry.csv  tag16_06_00003_geometry.csv  tag16_06_00004_geometry.csv  tag16_06_00007_geometry.csv
lib/tag_calib/0/: tag16_05_00000_geometry.csv  tag16_05_00000_planer.csv  tag16_05_00001_planer.csv  tag16_05_00002_geometry.csv  tag16_05_00004_geometry.csv  tag16_05_00004_planer.csv  tag16_05_00005_planer.csv  tag16_05_00006_geometry.csv  tag16_05_00006_planer.csv  tag16_05_00007_geometry.csv  tag16_05_00008_geometry.csv
lib/tag_calib/1/: tag16_05_00000_planer.csv  tag16_05_00002_planer.csv  tag16_05_00004_planer.csv  tag16_05_00006_geometry.csv  tag16_05_00007_geometry.csv
matlab/: analyzeLiDARTagPackage.m  ccmain.m  computeMeanOfTranslationNRotation.m  computePoseFromLiDARToMocapMarkers.m  false_positives.m  genTables.m  getSingleTextData.m  getTextData.m  main.m  main_backup.m  restuls.m  single_dataset.m  summarizeGeneralAnalysis.m  tag_size1.220000pose.txt  test.m  testKNN.m  test_convexhull.m  test_original.m  textmain.m
matlab/function_dictionary/: build_LiDARTag_library.m  compare_with_apriltag_dic.m  computeFunctionInnerProduct.m  computeGeometryAndNormalInnerProduct.m  constructGeometryPointCloud.m  loadAprilTagFamily.m  loadAprilTagPointCloud.m  loadData.m  plotResults.m  test_function_inner_product.m  test_gradient.m  transformToTemplate.m  untitled.m
matlab/new_preprocess/: CCW1.m  big-3.mat  createSE3.m  main.m  read_txt.m  staightfront1.m
preprocess/: CCW1.m  createSE3.m  loadpose.m
rviz/: LiDARTag.rviz  LiDARTag_pandar.rviz  cluster.rviz  lidartag.rviz  lidartag_pandar.rviz  lidartag_pandar_calib.rviz
scripts/: clusterAnalysis.ipynb  plot.py  rectangle_model.py  scratchpad.ipynb  viewStats.ipynb
src/: apriltag_utils.cc  apriltag_utils.cpp  ctags_file  lidar_tag.cc  lidar_tag_cluster.cc  lidar_tag_prune.cc  lidar_tag_rviz.cc  lidartag.cc  lidartag.cpp  lidartag_cluster.cc  lidartag_cluster.cpp  lidartag_decode.cc  lidartag_decode.cpp  lidartag_pose.cc  lidartag_pose.cpp  lidartag_prune.cc  lidartag_prune.cpp  lidartag_rviz.cc  lidartag_rviz.cpp  main.cc  main.cpp  rectangle_estimator.cpp  tag16h5.cc  tag16h5.cpp  tag49h14.cc  tag49h14.cpp  utils.cc  utils.cpp
src/decoding/: naive_hamming_decoding.cpp
test/: test_hamming_decoding.cpp  test_rectangle_estimation.cpp
(+81 files in other folders)
